--- a/idb/classes/indexeddbdriver.html
+++ b/idb/classes/indexeddbdriver.html
@@ -107,6 +107,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="indexeddbdriver.html#connect" class="tsd-kind-icon">connect</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="indexeddbdriver.html#deletespace" class="tsd-kind-icon">delete<wbr>Space</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="indexeddbdriver.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="indexeddbdriver.html#loadchunk" class="tsd-kind-icon">load<wbr>Chunk</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="indexeddbdriver.html#loadspace" class="tsd-kind-icon">load<wbr>Space</a></li>
@@ -130,7 +131,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L19">index.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L19">index.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">db<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IDBDatabase</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L17">index.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L17">index.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -172,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">indexedDB<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">IDBFactory</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L16">index.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L16">index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,7 +183,7 @@
 					<div class="tsd-signature tsd-kind-icon">prefix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L18">index.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L18">index.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -192,7 +193,7 @@
 					<div class="tsd-signature tsd-kind-icon">spaces<wbr>Collection<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L19">index.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L19">index.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -209,7 +210,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L125">index.ts:125</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L138">index.ts:138</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -230,9 +231,33 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.connect</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L33">index.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L33">index.ts:33</a></li>
 								</ul>
 							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="deletespace" class="tsd-anchor"></a>
+					<h3>delete<wbr>Space</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">delete<wbr>Space<span class="tsd-signature-symbol">(</span>id<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">SpaceID</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Implementation of IStorageDriver.deleteSpace</p>
+								<ul>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L125">index.ts:125</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>id: <span class="tsd-signature-type">SpaceID</span></h5>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
@@ -248,7 +273,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.loadAllSpaces</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L89">index.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L89">index.ts:89</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ISpace</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -266,7 +291,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.loadChunk</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L60">index.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L60">index.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -290,7 +315,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.loadSpace</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L100">index.ts:100</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L100">index.ts:100</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -314,7 +339,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.markDraftChunkAsUnused</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L84">index.ts:84</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L84">index.ts:84</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -338,7 +363,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.saveChunk</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L71">index.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L71">index.ts:71</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -362,7 +387,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of IStorageDriver.saveSpace</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/idb/src/index.ts#L111">index.ts:111</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/idb/src/index.ts#L111">index.ts:111</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -415,6 +440,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="indexeddbdriver.html#connect" class="tsd-kind-icon">connect</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="indexeddbdriver.html#deletespace" class="tsd-kind-icon">delete<wbr>Space</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="indexeddbdriver.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a>
