--- a/core/classes/inmemorychunkstorage.html
+++ b/core/classes/inmemorychunkstorage.html
@@ -100,6 +100,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="inmemorychunkstorage.html#clearchunks" class="tsd-kind-icon">clear<wbr>Chunks</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="inmemorychunkstorage.html#clearspaces" class="tsd-kind-icon">clear<wbr>Spaces</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-has-type-parameter"><a href="inmemorychunkstorage.html#createspace" class="tsd-kind-icon">create<wbr>Space</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="inmemorychunkstorage.html#deletespace" class="tsd-kind-icon">delete<wbr>Space</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="inmemorychunkstorage.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="inmemorychunkstorage.html#loadchunk" class="tsd-kind-icon">load<wbr>Chunk</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="inmemorychunkstorage.html#loadspace" class="tsd-kind-icon">load<wbr>Space</a></li>
@@ -140,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">chunks<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Map</span><span class="tsd-signature-symbol">&lt;</span><a href="../modules.html#chunkid" class="tsd-signature-type" data-tsd-kind="Type alias">ChunkID</a><span class="tsd-signature-symbol">, </span><a href="../interfaces/igenericchunk.html" class="tsd-signature-type" data-tsd-kind="Interface">IGenericChunk</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L8">in-memory-chunk-storage.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L8">in-memory-chunk-storage.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -150,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">spaces<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Map</span><span class="tsd-signature-symbol">&lt;</span><a href="../modules.html#spaceid" class="tsd-signature-type" data-tsd-kind="Type alias">SpaceID</a><span class="tsd-signature-symbol">, </span><a href="../interfaces/ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L9">in-memory-chunk-storage.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L9">in-memory-chunk-storage.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -168,7 +169,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#clearchunks">clearChunks</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L30">in-memory-chunk-storage.ts:30</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L30">in-memory-chunk-storage.ts:30</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -186,7 +187,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#clearspaces">clearSpaces</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L70">in-memory-chunk-storage.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L70">in-memory-chunk-storage.ts:70</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -203,7 +204,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L44">in-memory-chunk-storage.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L44">in-memory-chunk-storage.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -223,6 +224,30 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="deletespace" class="tsd-anchor"></a>
+					<h3>delete<wbr>Space</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">delete<wbr>Space<span class="tsd-signature-symbol">(</span>id<span class="tsd-signature-symbol">: </span><a href="../modules.html#spaceid" class="tsd-signature-type" data-tsd-kind="Type alias">SpaceID</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#deletespace">deleteSpace</a></p>
+								<ul>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L78">in-memory-chunk-storage.ts:78</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>id: <a href="../modules.html#spaceid" class="tsd-signature-type" data-tsd-kind="Type alias">SpaceID</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="loadallspaces" class="tsd-anchor"></a>
 					<h3>load<wbr>All<wbr>Spaces</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -233,7 +258,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#loadallspaces">loadAllSpaces</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L74">in-memory-chunk-storage.ts:74</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L74">in-memory-chunk-storage.ts:74</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/ispace.html" class="tsd-signature-type" data-tsd-kind="Interface">ISpace</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -251,7 +276,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#loadchunk">loadChunk</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L12">in-memory-chunk-storage.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L12">in-memory-chunk-storage.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -275,7 +300,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#loadspace">loadSpace</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L51">in-memory-chunk-storage.ts:51</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L51">in-memory-chunk-storage.ts:51</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -299,7 +324,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#markdraftchunkasunused">markDraftChunkAsUnused</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L22">in-memory-chunk-storage.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L22">in-memory-chunk-storage.ts:22</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -323,7 +348,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#removechunk">removeChunk</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L39">in-memory-chunk-storage.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L39">in-memory-chunk-storage.ts:39</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -346,7 +371,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L34">in-memory-chunk-storage.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L34">in-memory-chunk-storage.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -370,7 +395,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#savechunk">saveChunk</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L17">in-memory-chunk-storage.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L17">in-memory-chunk-storage.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -394,7 +419,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/istoragecachedriver.html">IStorageCacheDriver</a>.<a href="../interfaces/istoragecachedriver.html#savespace">saveSpace</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L55">in-memory-chunk-storage.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L55">in-memory-chunk-storage.ts:55</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -417,7 +442,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L26">in-memory-chunk-storage.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L26">in-memory-chunk-storage.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -440,7 +465,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/cd329ef/packages/core/src/in-memory-chunk-storage.ts#L60">in-memory-chunk-storage.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/ea84157/packages/core/src/in-memory-chunk-storage.ts#L60">in-memory-chunk-storage.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -490,6 +515,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-has-type-parameter">
 								<a href="inmemorychunkstorage.html#createspace" class="tsd-kind-icon">create<wbr>Space</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="inmemorychunkstorage.html#deletespace" class="tsd-kind-icon">delete<wbr>Space</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="inmemorychunkstorage.html#loadallspaces" class="tsd-kind-icon">load<wbr>All<wbr>Spaces</a>
