--- a/react/modules.html
+++ b/react/modules.html
@@ -94,7 +94,7 @@
 					<div class="tsd-signature tsd-kind-icon">Query<wbr>Result&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L4">index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L4">index.ts:4</a></li>
 						</ul>
 					</aside>
 					<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -113,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">ChunkDBContext<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Context</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ChunkDB</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L11">index.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L11">index.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -123,7 +123,7 @@
 					<div class="tsd-signature tsd-kind-icon">ChunkDBProvider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Provider</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ChunkDB</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L13">index.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L13">index.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,7 +140,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L15">index.ts:15</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L15">index.ts:15</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">ChunkDB</span></h4>
@@ -157,7 +157,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L46">index.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L46">index.ts:46</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -186,7 +186,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L6">index.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L6">index.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></h4>
@@ -209,19 +209,22 @@
 					<a name="usequeryall" class="tsd-anchor"></a>
 					<h3>use<wbr>Query<wbr>All</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">use<wbr>Query<wbr>All&lt;PARAMS&gt;<span class="tsd-signature-symbol">(</span>spaceID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">SpaceID</span>, queryBuilder<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>space<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DataSpace</span>, <span class="tsd-signature-symbol">...</span>params<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PARAMS</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Query</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span>, defaultValue<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">any</span>, <span class="tsd-signature-symbol">...</span>params<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PARAMS</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="modules.html#queryresult" class="tsd-signature-type" data-tsd-kind="Type alias">QueryResult</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">use<wbr>Query<wbr>All&lt;T, PARAMS&gt;<span class="tsd-signature-symbol">(</span>spaceID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">SpaceID</span>, queryBuilder<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>space<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DataSpace</span>, <span class="tsd-signature-symbol">...</span>params<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PARAMS</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Query</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span>, defaultValue<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">any</span>, <span class="tsd-signature-symbol">...</span>params<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PARAMS</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="modules.html#queryresult" class="tsd-signature-type" data-tsd-kind="Type alias">QueryResult</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L58">index.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L58">index.ts:58</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>PARAMS<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h4>
+									<h4>T = <span class="tsd-signature-type">any</span></h4>
+								</li>
+								<li>
+									<h4>PARAMS<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span> = <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -260,7 +263,7 @@
 									<h5><span class="tsd-flag ts-flagRest">Rest</span> <span class="tsd-signature-symbol">...</span>params: <span class="tsd-signature-type">PARAMS</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="modules.html#queryresult" class="tsd-signature-type" data-tsd-kind="Type alias">QueryResult</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="modules.html#queryresult" class="tsd-signature-type" data-tsd-kind="Type alias">QueryResult</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -274,7 +277,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L19">index.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L19">index.ts:19</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -297,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/9fff402/packages/react/src/index.ts#L32">index.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/chunk-db/chunk-db/blob/691cb3d/packages/react/src/index.ts#L32">index.ts:32</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Space</span><span class="tsd-signature-symbol">[]</span></h4>
